@@ -1,5 +1,6 @@
 # Sample PAM Configuration for Small Footprint CIM Broker
 auth       required     pam_unix.so
+auth       required     pam_succeed_if.so user ingroup sfcb
 account    required     pam_unix.so
 password   required     pam_unix.so
 session    required     pam_unix.so
